--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Sea stories, English'
 - !lcc 'PR'
+- GITenberg
 title: The Romance of the Coast
 url: http://www.gutenberg.org/ebooks/16911
